--- a/portafolio.html
+++ b/portafolio.html
@@ -21,23 +21,23 @@
         <main>
             <section class="row" data-masonry='{"percentPosition":true}'>
                 <div class="col-md-4 mb-4">
-                    <img src="imgs/fondo.jpg" class="card-img-top" alt="Proyecto 1">
+                    <img src="imgs/landing.jpg" class="card-img-top" alt="Proyecto 1">
                     <div class="card text-dark">
                         <div class="card-body">
                             <h2 class="card-title">Proyecto #1</h2>
-                            <p class="card-text">Proyecto donde se demuestra ...</p>
-                            <a href="#" class="btn btn-primary" style="background-color:#f8b153; border-color: #f8b153; ">Ver</a>
+                            <p class="card-text">Proyecto donde se realiza una landing page usando Bootstrap.</p>
+                            <a href="https://github.com/msantos-23/LandingPage.git" class="btn btn-primary" style="background-color:#f8b153; border-color: #f8b153; ">Ver</a>
                         </div>
                     </div>
                 </div>
                 
                 <div class="col-md-4 mb-4">
-                    <img src="imgs/fondo1.jpg" class="card-img-top" alt="Proyecto 1">
+                    <img src="imgs/products.jpg" class="card-img-top" alt="Proyecto 1">
                     <div class="card text-dark">
                         <div class="card-body">
                             <h2 class="card-title">Proyecto #2</h2>
-                            <p class="card-text">Proyecto donde se demuestra ...</p>
-                            <a href="#" class="btn btn-primary"  style="background-color:#f8b153; border-color: #f8b153; ">Ver</a>
+                            <p class="card-text">Proyecto donde se realiza un E-commerce usando Foundation.</p>
+                            <a href="https://github.com/msantos-23/ProductsProject.git" class="btn btn-primary"  style="background-color:#f8b153; border-color: #f8b153; ">Ver</a>
                         </div>
                     </div>
                 </div>
