--- a/portafolio.html
+++ b/portafolio.html
@@ -18,6 +18,10 @@
                 <a href="porfolio.html" class="nav-link">Proyectos</a>
             </nav>
         </header>
+        <div>
+            <h1>&nbsp;</h1>
+        </div>
+
         <main>
             <section class="row" data-masonry='{"percentPosition":true}'>
                 <div class="col-md-4 mb-4">
@@ -26,7 +30,8 @@
                         <div class="card-body">
                             <h2 class="card-title">Proyecto #1</h2>
                             <p class="card-text">Proyecto donde se realiza una landing page usando Bootstrap.</p>
-                            <a href="https://github.com/msantos-23/LandingPage.git" class="btn btn-primary" style="background-color:#f8b153; border-color: #f8b153; ">Ver</a>
+                            <a href="https://github.com/msantos-23/LandingPage.git" target="_blank" class="btn btn-primary" style="background-color:#f8b153; border-color: #f8b153; ">Repositorio Git</a>
+                            <a href="https://msantos-23.github.io/LandingPage/" target="_blank" class="btn btn-primary" style="background-color:#f8b153; border-color: #f8b153; ">Ver</a>
                         </div>
                     </div>
                 </div>
@@ -37,7 +42,8 @@
                         <div class="card-body">
                             <h2 class="card-title">Proyecto #2</h2>
                             <p class="card-text">Proyecto donde se realiza un E-commerce usando Foundation.</p>
-                            <a href="https://github.com/msantos-23/ProductsProject.git" class="btn btn-primary"  style="background-color:#f8b153; border-color: #f8b153; ">Ver</a>
+                            <a href="https://github.com/msantos-23/ProductsProject.git" target="_blank" class="btn btn-primary"  style="background-color:#f8b153; border-color: #f8b153; ">Repositorio Git</a>
+                            <a href="https://github.com/msantos-23/ProductsProject.git" target="_blank" class="btn btn-primary"  style="background-color:#f8b153; border-color: #f8b153; ">Ver</a>
                         </div>
                     </div>
                 </div>
