--- a/portafolio.html
+++ b/portafolio.html
@@ -43,7 +43,7 @@
                             <h2 class="card-title">Proyecto #2</h2>
                             <p class="card-text">Proyecto donde se realiza un E-commerce usando Foundation.</p>
                             <a href="https://github.com/msantos-23/ProductsProject.git" target="_blank" class="btn btn-primary"  style="background-color:#f8b153; border-color: #f8b153; ">Repositorio Git</a>
-                            <a href="https://github.com/msantos-23/ProductsProject.git" target="_blank" class="btn btn-primary"  style="background-color:#f8b153; border-color: #f8b153; ">Ver</a>
+                            <a href="https://msantos-23.github.io/ProductsProject/" target="_blank" class="btn btn-primary"  style="background-color:#f8b153; border-color: #f8b153; ">Ver</a>
                         </div>
                     </div>
                 </div>
