--- a/portafolio.html
+++ b/portafolio.html
@@ -49,12 +49,13 @@
                 </div>
 
                 <div class="col-md-4 mb-4">
-                    <img src="imgs/fondo.jpg" class="card-img-top" alt="Proyecto 1">
+                    <img src="imgs/DashboardTailwind.jpg" class="card-img-top" alt="Proyecto 1">
                     <div class="card text-dark">
                         <div class="card-body">
                             <h2 class="card-title">Proyecto #3</h2>
-                            <p class="card-text">Proyecto donde se demuestra ...</p>
-                            <a href="#" class="btn btn-primary" style="background-color:#f8b153; border-color: #f8b153; ">Ver</a>
+                            <p class="card-text">Proyecto donde se realiza una Dashboard usando Tailwind.</p>
+                            <a href="https://github.com/natamador1976/TailwindProjectNew" class="btn btn-primary" style="background-color:#f8b153; border-color: #f8b153; ">Repositorio Git</a>
+                            <a href="https://natamador1976.github.io/TailwindProjectNew/" class="btn btn-primary" style="background-color:#f8b153; border-color: #f8b153; ">Ver</a>
                         </div>
                     </div>
                 </div>
