--- a/portafolio.html
+++ b/portafolio.html
@@ -61,12 +61,13 @@
                 </div>
                 
                 <div class="col-md-4 mb-4">
-                    <img src="imgs/fondo1.jpg" class="card-img-top" alt="Proyecto 1">
+                    <img src="imgs/ProductsDetail.jpg" class="card-img-top" alt="Proyecto 1">
                     <div class="card text-dark">
                         <div class="card-body">
                             <h2 class="card-title">Proyecto #4</h2>
-                            <p class="card-text">Proyecto donde se demuestra ...</p>
-                            <a href="#" class="btn btn-primary"  style="background-color:#f8b153; border-color: #f8b153; ">Ver</a>
+                            <p class="card-text">Proyecto donde se realiza un Product Detail utilizando Tailwind y generando componentes con Handlebars</p>
+                            <a href="https://github.com/natamador1976/ProductDetailTailwind" class="btn btn-primary"  style="background-color:#f8b153; border-color: #f8b153; ">Repositorio Git</a>
+                            <a href="https://natamador1976.github.io/ProductDetailTailwind/dist/index.html" class="btn btn-primary"  style="background-color:#f8b153; border-color: #f8b153; ">Ver</a>
                         </div>
                     </div>
                 </div>
