--- a/portafolio.html
+++ b/portafolio.html
@@ -73,12 +73,13 @@
                 </div>
 
                 <div class="col-md-4 mb-4">
-                    <img src="imgs/fondo.jpg" class="card-img-top" alt="Proyecto 1">
+                    <img src="imgs/LoginPage.jpg" class="card-img-top" alt="Proyecto 1">
                     <div class="card text-dark">
                         <div class="card-body">
                             <h2 class="card-title">Proyecto #5</h2>
-                            <p class="card-text">Proyecto donde se demuestra ...</p>
-                            <a href="#" class="btn btn-primary" style="background-color:#f8b153; border-color: #f8b153; ">Ver</a>
+                            <p class="card-text">Proyecto donde se realiza un Login utilizando Tailwind y React</p>
+                            <a href="https://github.com/msantos-23/-LoginPage-React-Tailwind.git" class="btn btn-primary" style="background-color:#f8b153; border-color: #f8b153; ">Repositorio Git</a>
+                            <a href="https://msantos-23.github.io/-LoginPage-React-Tailwind/" class="btn btn-primary" style="background-color:#f8b153; border-color: #f8b153; ">Ver</a>
                         </div>
                     </div>
                 </div>
