--- a/portafolio.html
+++ b/portafolio.html
@@ -85,12 +85,13 @@
                 </div>
                 
                 <div class="col-md-4 mb-4">
-                    <img src="imgs/fondo1.jpg" class="card-img-top" alt="Proyecto 1">
+                    <img src="imgs/SPA-TODO.jpg" class="card-img-top" alt="Proyecto 6">
                     <div class="card text-dark">
                         <div class="card-body">
                             <h2 class="card-title">Proyecto #6</h2>
-                            <p class="card-text">Proyecto donde se demuestra ...</p>
-                            <a href="#" class="btn btn-primary"  style="background-color:#f8b153; border-color: #f8b153; ">Ver</a>
+                            <p class="card-text">Proyecto donde se realiza un To Do usando React y Tailwind adicional se hace un enrutamiento con React Router</p>
+                            <a href="https://github.com/msantos-23/SPA-SimplePageApplication.git" class="btn btn-primary"  style="background-color:#f8b153; border-color: #f8b153; ">Repositorio Git</a>
+                            <a href="https://msantos-23.github.io/SPA-SimplePageApplication/" class="btn btn-primary"  style="background-color:#f8b153; border-color: #f8b153; ">Ver</a>
                         </div>
                     </div>
                 </div>
