--- a/portafolio.html
+++ b/portafolio.html
@@ -15,7 +15,7 @@
             <h1 class="float-md-start">Portafolio</h1>
             <nav class="nav nav-masthead justify-content-evenly float-md-end">
                 <a href="index.html" class="nav-link">Inicio</a>
-                <a href="porfolio.html" class="nav-link">Proyectos</a>
+                <a href="portafolio.html" class="nav-link">Proyectos</a>
             </nav>
         </header>
         <div>
@@ -54,8 +54,8 @@
                         <div class="card-body">
                             <h2 class="card-title">Proyecto #3</h2>
                             <p class="card-text">Proyecto donde se realiza una Dashboard usando Tailwind.</p>
-                            <a href="https://github.com/natamador1976/TailwindProjectNew" class="btn btn-primary" style="background-color:#f8b153; border-color: #f8b153; ">Repositorio Git</a>
-                            <a href="https://natamador1976.github.io/TailwindProjectNew/" class="btn btn-primary" style="background-color:#f8b153; border-color: #f8b153; ">Ver</a>
+                            <a href="https://github.com/natamador1976/TailwindProjectNew" target="_blank" class="btn btn-primary" style="background-color:#f8b153; border-color: #f8b153; ">Repositorio Git</a>
+                            <a href="https://natamador1976.github.io/TailwindProjectNew/" target="_blank" class="btn btn-primary" style="background-color:#f8b153; border-color: #f8b153; ">Ver</a>
                         </div>
                     </div>
                 </div>
@@ -66,8 +66,8 @@
                         <div class="card-body">
                             <h2 class="card-title">Proyecto #4</h2>
                             <p class="card-text">Proyecto donde se realiza un Product Detail utilizando Tailwind y generando componentes con Handlebars</p>
-                            <a href="https://github.com/natamador1976/ProductDetailTailwind" class="btn btn-primary"  style="background-color:#f8b153; border-color: #f8b153; ">Repositorio Git</a>
-                            <a href="https://natamador1976.github.io/ProductDetailTailwind/dist/index.html" class="btn btn-primary"  style="background-color:#f8b153; border-color: #f8b153; ">Ver</a>
+                            <a href="https://github.com/natamador1976/ProductDetailTailwind" target="_blank" class="btn btn-primary"  style="background-color:#f8b153; border-color: #f8b153; ">Repositorio Git</a>
+                            <a href="https://natamador1976.github.io/ProductDetailTailwind/dist/index.html" target="_blank" class="btn btn-primary"  style="background-color:#f8b153; border-color: #f8b153; ">Ver</a>
                         </div>
                     </div>
                 </div>
@@ -77,9 +77,9 @@
                     <div class="card text-dark">
                         <div class="card-body">
                             <h2 class="card-title">Proyecto #5</h2>
-                            <p class="card-text">Proyecto donde se realiza un Login utilizando Tailwind y React</p>
-                            <a href="https://github.com/msantos-23/-LoginPage-React-Tailwind.git" class="btn btn-primary" style="background-color:#f8b153; border-color: #f8b153; ">Repositorio Git</a>
-                            <a href="https://msantos-23.github.io/-LoginPage-React-Tailwind/" class="btn btn-primary" style="background-color:#f8b153; border-color: #f8b153; ">Ver</a>
+                            <p class="card-text">Proyecto donde se realiza un Inicio de Sesión utilizando Tailwind para darle estilo y React para facilitar la creación de componentes</p>
+                            <a href="https://github.com/msantos-23/-LoginPage-React-Tailwind.git"  target="_blank"class="btn btn-primary" style="background-color:#f8b153; border-color: #f8b153; ">Repositorio Git</a>
+                            <a href="https://msantos-23.github.io/-LoginPage-React-Tailwind/"  target="_blank"class="btn btn-primary" style="background-color:#f8b153; border-color: #f8b153; ">Ver</a>
                         </div>
                     </div>
                 </div>
@@ -89,20 +89,20 @@
                     <div class="card text-dark">
                         <div class="card-body">
                             <h2 class="card-title">Proyecto #6</h2>
-                            <p class="card-text">Proyecto donde se realiza un To Do usando React y Tailwind adicional se hace un enrutamiento con React Router</p>
-                            <a href="https://github.com/msantos-23/SPA-SimplePageApplication.git" class="btn btn-primary"  style="background-color:#f8b153; border-color: #f8b153; ">Repositorio Git</a>
-                            <a href="https://msantos-23.github.io/SPA-SimplePageApplication/" class="btn btn-primary"  style="background-color:#f8b153; border-color: #f8b153; ">Ver</a>
+                            <p class="card-text">Proyecto donde se realiza un To Do App como SPA usando React y Tailwind, adicional se hace un enrutamiento con React Router</p>
+                            <a href="https://github.com/msantos-23/SPA-SimplePageApplication.git" target="_blank" class="btn btn-primary"  style="background-color:#f8b153; border-color: #f8b153; ">Repositorio Git</a>
+                            <a href="https://msantos-23.github.io/SPA-SimplePageApplication/"  target="_blank"class="btn btn-primary"  style="background-color:#f8b153; border-color: #f8b153; ">Ver</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-md-4 mb-4">
-                    <img src="imgs/fondo.jpg" class="card-img-top" alt="Proyecto 1">
+                    <img src="imgs/ToDo-Firebase.jpg" class="card-img-top" alt="Proyecto 1">
                     <div class="card text-dark">
                         <div class="card-body">
                             <h2 class="card-title">Proyecto #7</h2>
-                            <p class="card-text">Proyecto donde se demuestra ...</p>
-                            <a href="#" class="btn btn-primary" style="background-color:#f8b153; border-color: #f8b153; ">Ver</a>
+                            <p class="card-text">Proyecto de To Do App modificado, en esta ocasión ya está ligado a una base de datos usando Firebase RealTime Database en la cual sincronizamos y almacenamos todos los datos en tiempo real</p>
+                            <a href="https://spa-todo-36e5b.web.app" target="_blank" class="btn btn-primary" style="background-color:#f8b153; border-color: #f8b153; ">Ver</a>
                         </div>
                     </div>
                 </div>
