--- a/portafolio.html
+++ b/portafolio.html
@@ -108,12 +108,13 @@
                 </div>
                 
                 <div class="col-md-4 mb-4">
-                    <img src="imgs/fondo1.jpg" class="card-img-top" alt="Proyecto 1">
+                    <img src="imgs/covid19.jpg" class="card-img-top" alt="Proyecto 1">
                     <div class="card text-dark">
                         <div class="card-body">
                             <h2 class="card-title">Proyecto #8</h2>
-                            <p class="card-text">Proyecto donde se demuestra ...</p>
-                            <a href="#" class="btn btn-primary"  style="background-color:#f8b153; border-color: #f8b153; ">Ver</a>
+                            <p class="card-text">Proyecto en equipo usando React para la creación de componentes, Talwind para dar estilo Firebase como gestor de base de datos y RapiApi para obtener datos acerca del Covid 19</p>
+                            <a href="https://github.com/natamador1976/GraphsRapiApiFirebase" class="btn btn-primary" style="background-color:#f8b153; border-color: #f8b153; ">Repositorio Git</a>
+                            <a href="https://covidinformation-6b400.web.app/totals" class="btn btn-primary" style="background-color:#f8b153; border-color: #f8b153; ">Ver</a>
                         </div>
                     </div>
                 </div>
@@ -124,7 +125,8 @@
                         <div class="card-body">
                             <h2 class="card-title">Proyecto #9</h2>
                             <p class="card-text">Proyecto donde se demuestra ...</p>
-                            <a href="#" class="btn btn-primary" style="background-color:#f8b153; border-color: #f8b153; ">Ver</a>
+                            <a href="#" class="btn btn-primary" style="background-color:#f8b153; border-color: #f8b153; ">Repositorio Git</a>
+                          
                         </div>
                     </div>
                 </div>
