--- a/portafolio.html
+++ b/portafolio.html
@@ -113,8 +113,8 @@
                         <div class="card-body">
                             <h2 class="card-title">Proyecto #8</h2>
                             <p class="card-text">Proyecto en equipo usando React para la creación de componentes, Talwind para dar estilo Firebase como gestor de base de datos y RapiApi para obtener datos acerca del Covid 19</p>
-                            <a href="https://github.com/natamador1976/GraphsRapiApiFirebase" class="btn btn-primary" style="background-color:#f8b153; border-color: #f8b153; ">Repositorio Git</a>
-                            <a href="https://covidinformation-6b400.web.app/totals" class="btn btn-primary" style="background-color:#f8b153; border-color: #f8b153; ">Ver</a>
+                            <a href="https://github.com/natamador1976/GraphsRapiApiFirebase" target="_blank" class="btn btn-primary" style="background-color:#f8b153; border-color: #f8b153; ">Repositorio Git</a>
+                            <a href="https://covidinformation-6b400.web.app/totals" target="_blank" class="btn btn-primary" style="background-color:#f8b153; border-color: #f8b153; ">Ver</a>
                         </div>
                     </div>
                 </div>
